cluster/apps/networking/external-services/pi-hole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pihole
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: "10.0.5.3"
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
